fix: script path

--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
 
 
     
-    <script type="module" src="/js/script.mjs"></script>
+    <script type="module" src="js/script.mjs"></script>
 </body>
 </html>
